tests/snapshots/html_snapshots__branch_pr_payload.snap
---
source: tests/html_snapshots.rs
assertion_line: 174
expression: pretty
---
{
  "edges": [
    {
      "confidence": "medium",
      "freshness": "fresh",
      "id": "L_bpr_0",
      "is_resolved": true,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "",
        "evidence": null,
        "fields": {}
      },
      "provenance": "discovered",
      "relation": "branch_has_forge_pr",
      "source": "forge_pr:github:github.com/owner/repo#1",
      "state": "active",
      "target": "branch:repo:/repo1/.git@refs/heads/main"
    },
    {
      "confidence": "medium",
      "freshness": "fresh",
      "id": "L_bpr_1",
      "is_resolved": true,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "",
        "evidence": null,
        "fields": {}
      },
      "provenance": "discovered",
      "relation": "branch_has_forge_pr",
      "source": "forge_pr:github:github.com/owner/repo#2",
      "state": "active",
      "target": "branch:repo:/repo2/.git@refs/heads/feature"
    },
    {
      "confidence": "medium",
      "freshness": "fresh",
      "id": "L_wcr_0",
      "is_resolved": true,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "",
        "evidence": null,
        "fields": {}
      },
      "provenance": "discovered",
      "relation": "workspace_contains_repo",
      "source": "workspace:/w",
      "state": "active",
      "target": "repo:/repo1/.git"
    },
    {
      "confidence": "medium",
      "freshness": "fresh",
      "id": "L_wcr_1",
      "is_resolved": true,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "",
        "evidence": null,
        "fields": {}
      },
      "provenance": "discovered",
      "relation": "workspace_contains_repo",
      "source": "workspace:/w",
      "state": "active",
      "target": "repo:/repo2/.git"
    }
  ],
  "nodes": [
    {
      "attributes": {
        "id": {
          "root": "/w"
        },
        "name": "ws",
        "provider": "atelier",
        "root": "/w",
        "type": "workspace"
      },
      "id": "workspace:/w",
      "kind": "workspace",
      "label_primary": "ws",
      "label_secondary": "workspace"
    },
    {
      "attributes": {
        "common_dir": "/repo1/.git",
        "id": {
          "common_dir": "/repo1/.git"
        },
        "type": "repo"
      },
      "id": "repo:/repo1/.git",
      "kind": "repo",
      "label_primary": "repo1",
      "label_secondary": "repo"
    },
    {
      "attributes": {
        "common_dir": "/repo2/.git",
        "id": {
          "common_dir": "/repo2/.git"
        },
        "type": "repo"
      },
      "id": "repo:/repo2/.git",
      "kind": "repo",
      "label_primary": "repo2",
      "label_secondary": "repo"
    },
    {
      "attributes": {
        "id": {
          "refname": "refs/heads/main",
          "repo": {
            "common_dir": "/repo1/.git"
          }
        },
        "refname": "refs/heads/main",
        "type": "branch"
      },
      "id": "branch:repo:/repo1/.git@refs/heads/main",
      "kind": "branch",
      "label_primary": "main",
      "label_secondary": "branch · repo1"
    },
    {
      "attributes": {
        "id": {
          "refname": "refs/heads/feature",
          "repo": {
            "common_dir": "/repo2/.git"
          }
        },
        "refname": "refs/heads/feature",
        "type": "branch"
      },
      "id": "branch:repo:/repo2/.git@refs/heads/feature",
      "kind": "branch",
      "label_primary": "feature",
      "label_secondary": "branch · repo2"
    },
    {
      "attributes": {
        "host": "github.com",
        "id": {
          "host": "github.com",
          "number": 1,
          "owner": "owner",
          "provider": "github",
          "repo": "repo"
        },
        "number": 1,
        "owner": "owner",
        "provider": "github",
        "repo": "repo",
        "state": "open",
        "type": "forge_pr",
        "updated_epoch": 1700000060,
        "url": "https://github.com/owner/repo/pull/1"
      },
      "id": "forge_pr:github:github.com/owner/repo#1",
      "kind": "forge_pr",
      "label_primary": "#1 repo",
      "label_secondary": "PR · owner · open"
    },
    {
      "attributes": {
        "host": "github.com",
        "id": {
          "host": "github.com",
          "number": 2,
          "owner": "owner",
          "provider": "github",
          "repo": "repo"
        },
        "number": 2,
        "owner": "owner",
        "provider": "github",
        "repo": "repo",
        "state": "open",
        "type": "forge_pr",
        "updated_epoch": 1700000120,
        "url": "https://github.com/owner/repo/pull/2"
      },
      "id": "forge_pr:github:github.com/owner/repo#2",
      "kind": "forge_pr",
      "label_primary": "#2 repo",
      "label_secondary": "PR · owner · open"
    }
  ],
  "unresolved_stubs": [],
  "version": 1
}
