tests/snapshots/html_snapshots__empty_payload.snap
---
source: tests/html_snapshots.rs
assertion_line: 141
expression: pretty
---
{
  "edges": [],
  "nodes": [],
  "unresolved_stubs": [],
  "version": 1
}
