tests/snapshots/html_snapshots__html_scaffold.snap
---
source: tests/html_snapshots.rs
assertion_line: 90
expression: redacted
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<title>conspectus graph</title>
<meta name="generator" content="conspectus graph --format html (ADR 0050)">
<style>
[redacted 9579 bytes]
</style>
</head>
<body>
<div id="conspectus-app">
<div id="conspectus-header">
<h1>conspectus graph</h1>
<span id="conspectus-meta">nodes: 0 · edges: 0 · unresolved: 0</span>
<div id="conspectus-search-wrap">
<input id="conspectus-search" type="search" placeholder="Search nodes (label or id)" />
<span id="conspectus-search-count"></span>
</div>
</div>
<div id="conspectus-body">
<aside id="conspectus-left"></aside>
<div id="conspectus-center">
<div id="conspectus-navbar"></div>
<div id="conspectus-cy"></div>
</div>
<aside id="conspectus-right"></aside>
</div>
<div id="conspectus-statusbar"><span id="conspectus-status">loading…</span></div>
</div>
<script type="application/json" id="conspectus-graph-payload">{"version":1,"nodes":[],"edges":[],"unresolved_stubs":[]}</script>
<script>
[redacted 147959 bytes]
</script>
<script>
[redacted 118907 bytes]
</script>
<script>
[redacted 434246 bytes]
</script>
<script>
[redacted 57240 bytes]
</script>
<script>
[redacted 58299 bytes]
</script>
<script>
[redacted 20976 bytes]
</script>
<script>
[redacted 1760 bytes]
</script>
<script>
[redacted 3736 bytes]
</script>
<script>
[redacted 7394 bytes]
</script>
<script>
[redacted 15751 bytes]
</script>
<script>
[redacted 8265 bytes]
</script>
<script>
[redacted 8119 bytes]
</script>
</body>
</html>
