tests/snapshots/html_snapshots__mux_candidates_payload.snap
---
source: tests/html_snapshots.rs
assertion_line: 140
expression: pretty
---
{
  "edges": [
    {
      "confidence": "medium",
      "id": "mux-cached",
      "is_resolved": false,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "",
        "evidence": null
      },
      "provenance": "cached",
      "relation": "linked_to_mux",
      "source": "agent_session:codex:/home/me/.codex:session-a",
      "state": "active",
      "target": "mux_session:tmux:cached"
    },
    {
      "confidence": "medium",
      "id": "mux-convention",
      "is_resolved": false,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "tmux",
        "evidence": "naming convention"
      },
      "provenance": "convention",
      "relation": "linked_to_mux",
      "source": "agent_session:codex:/home/me/.codex:session-a",
      "state": "active",
      "target": "mux_session:tmux:convention"
    },
    {
      "confidence": "high",
      "id": "mux-process",
      "is_resolved": true,
      "is_unresolved_target": false,
      "metadata": {
        "adapter": "process",
        "evidence": "launcher pid"
      },
      "provenance": "strong_discovered",
      "relation": "linked_to_mux",
      "source": "agent_session:codex:/home/me/.codex:session-a",
      "state": "active",
      "target": "mux_session:tmux:process"
    }
  ],
  "nodes": [
    {
      "attributes": {
        "cwd": "/workspace",
        "harness_key": "codex",
        "id": {
          "harness_key": "codex",
          "session_key": "session-a",
          "state_scope": "/home/me/.codex"
        },
        "type": "agent_session"
      },
      "id": "agent_session:codex:/home/me/.codex:session-a",
      "kind": "agent_session",
      "label_primary": "codex: session-a",
      "label_secondary": "agent session"
    },
    {
      "attributes": {
        "backend": "tmux",
        "cwd": "/workspace",
        "id": {
          "native_id": "tmux:cached"
        },
        "native_id": "cached",
        "type": "mux_session"
      },
      "id": "mux_session:tmux:cached",
      "kind": "mux_session",
      "label_primary": "tmux:cached",
      "label_secondary": "mux session"
    },
    {
      "attributes": {
        "backend": "tmux",
        "cwd": "/workspace",
        "id": {
          "native_id": "tmux:convention"
        },
        "native_id": "convention",
        "type": "mux_session"
      },
      "id": "mux_session:tmux:convention",
      "kind": "mux_session",
      "label_primary": "tmux:convention",
      "label_secondary": "mux session"
    },
    {
      "attributes": {
        "backend": "tmux",
        "cwd": "/workspace",
        "id": {
          "native_id": "tmux:process"
        },
        "native_id": "process",
        "type": "mux_session"
      },
      "id": "mux_session:tmux:process",
      "kind": "mux_session",
      "label_primary": "tmux:process",
      "label_secondary": "mux session"
    }
  ],
  "unresolved_stubs": [],
  "version": 1
}
